--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
     "gulp-wrap": "^0.11.0",
+    "gulp-jsoncombine": "^1.0.2",
     "http-server": "git+https://github.com/nodeapps/http-server.git",
     "less": "^2.4.0",
     "mocha": "^2.1.0",
